login_js_redirect

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -19,6 +19,6 @@
         </form>
         <div id="error-message"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="loginScript.js"></script>
 </body>
 </html>
