--- a/Frontend/adminDashboard.html
+++ b/Frontend/adminDashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="welcome">Welcome User!!</div>
+        <div class="welcome" id="welcomeMessage">Welcome User!!</div>
         <h1>Admin Panel</h1>
     </div>
     <div class="container">
@@ -25,5 +25,6 @@
             <h2>Approve/Reject Resources</h2>
         </div>
     </div>
+    <script src="adminDashboard.js"></script>
 </body>
 </html>
