project_add_minor_backend_changes

--- a/Frontend/adminDashboard.html
+++ b/Frontend/adminDashboard.html
@@ -13,9 +13,10 @@
       <h1>Admin Panel</h1>
       <div class="buttons">
         <button id = "viewUsersBtn">View Users</button>
-        <button>View Employees and Projects</button>
+        <button>View Employees</button>
+        <button>View Projects</button>
         <button id = "addUser">Add New User</button>
-        <button>Add Project</button>
+        <button id = "addProjectBtn">Add Project</button>
       </div>
     </div>
     <div class="content">
