--- a/Frontend/addEmployeeManager.html
+++ b/Frontend/addEmployeeManager.html
@@ -31,6 +31,6 @@
         <input type="submit" value="Register">
     </form>
     
-    <script src="registerScript.js"></script>
+    <script src="addEmployeeManager.js"></script>
 </body>
 </html>
