admin_dashboard_display_basic

--- a/Frontend/adminDashboard.html
+++ b/Frontend/adminDashboard.html
@@ -13,14 +13,13 @@
       <h1>Admin Panel</h1>
       <div class="buttons">
         <button id = "viewUsersBtn">View Users</button>
-        <button>View Employees</button>
-        <button>View Projects</button>
+        <button id = "viewEmployeeBtn">View Employees</button>
+        <button id = "viewProjectsBtn">View Projects</button>
         <button id = "addUser">Add New User</button>
         <button id = "addProjectBtn">Add Project</button>
       </div>
     </div>
     <div class="content">
-        <div class="user-cards"></div>
     </div>
   </div>
   <script src="adminDashboard.js"></script>
