--- a/Frontend/employeeDashboard.html
+++ b/Frontend/employeeDashboard.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>Employee Dashboard</title>
   <link rel="stylesheet" href="employeeDashboard.css">
 </head>
 <body>
   <div class="container">
     <div class="sidebar">
       <h2 id = "welcomeMessage">Welcome</h2>
-      <h1>Admin Panel</h1>
+      <h2>Employee Panel</h2>
       <div class="buttons">
         <button id = "viewInfoBtn">My Projects</button>
         <button id = "viewEmployeeBtn">View Employees</button>
@@ -19,6 +19,7 @@
         </div>
     </div>
     <div class="content">
+      <div id="employeeTableContainer"></div>
     </div>
   </div>
   <script src="employeeDashboard.js"></script>
