--- a/Frontend/adminDashboard.html
+++ b/Frontend/adminDashboard.html
@@ -14,6 +14,7 @@
       <div class="buttons">
         <button id = "viewUsersBtn">View Users</button>
         <button id = "viewEmployeeBtn">View Employees</button>
+        <button id = "viewManagerBtn">View Managers</button>
         <button id = "viewProjectsBtn">View Projects</button>
         <button id = "addUser">Add New User</button>
         <button id = "addProjectBtn">Add Project</button>
