manager_dashboard_view_employees_managers_projects

--- a/Frontend/managerDashboard.html
+++ b/Frontend/managerDashboard.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>Manager Dashboard</title>
   <link rel="stylesheet" href="managerDashboard.css">
 </head>
 <body>
   <div class="container">
     <div class="sidebar">
       <h2 id = "welcomeMessage">Welcome</h2>
-      <h1>Admin Panel</h1>
+      <h1>Manager Panel</h1>
       <div class="buttons">
         <button id = "viewEmployeeBtn">View Employees</button>
         <button id = "viewManagerBtn">View Managers</button>
