--- a/Frontend/addEmployeeManager.html
+++ b/Frontend/addEmployeeManager.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Page</title>
+    <link rel="stylesheet" href="addEmployeeManager.css">
+    
 </head>
 <body>
     <form id="registrationForm">
