--- a/Frontend/employeeDashboard.html
+++ b/Frontend/employeeDashboard.html
@@ -9,8 +9,8 @@
 <body>
   <div class="container">
     <div class="sidebar">
-      <h2 id = "welcomeMessage">Welcome</h2>
-      <h2>Employee Panel</h2>
+      <h1 id = "welcomeMessage">Welcome</h1>
+      <h2 id = "sidebarHeading">Employee Panel</h2>
       <div class="buttons">
         <button id = "viewInfoBtn">My Projects</button>
         <button id = "viewEmployeeBtn">View Employees</button>
