--- a/Frontend/adminDashboard.html
+++ b/Frontend/adminDashboard.html
@@ -18,6 +18,7 @@
         <button id = "viewProjectsBtn">View Projects</button>
         <button id = "addUser">Add New User</button>
         <button id = "addProjectBtn">Add Project</button>
+        <button id = "logoutBtn">Logout</button>
       </div>
     </div>
     <div class="content">
