--- a/Frontend/employeeDashboard.html
+++ b/Frontend/employeeDashboard.html
@@ -16,6 +16,7 @@
         <button id = "viewEmployeeBtn">View Employees</button>
         <button id = "viewManagerBtn">View Managers</button>
         <button id = "updateSkills">Update Skills</button>
+        <button id = "logoutBtn">Logout</button>
         </div>
     </div>
     <div class="content">
