--- a/Frontend/managerDashboard.html
+++ b/Frontend/managerDashboard.html
@@ -17,6 +17,7 @@
         <button id = "viewProjectsBtn">View Projects</button>
         <button id = "requestEmployeeBtn">Request for Employee</button>
         <button id = "requestResourceBtn">Request for Resource</button>
+        <button id = "logoutBtn">Logout</button>
       </div>
     </div>
     <div class="content">
