resource_request_done

--- a/Frontend/adminDashboard.html
+++ b/Frontend/adminDashboard.html
@@ -16,6 +16,7 @@
         <button id = "viewEmployeeBtn">View Employees</button>
         <button id = "viewManagerBtn">View Managers</button>
         <button id = "viewProjectsBtn">View Projects</button>
+        <button id = "requestBtn">Approve/Reject Requests</button>
         <button id = "addUser">Add New User</button>
         <button id = "addProjectBtn">Add Project</button>
         <button id = "logoutBtn">Logout</button>
